crates/archon-tui/tests/snapshots/tui_snapshots__tool_output_state_success_expanded_header.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: state.expanded_header()
---
▼ Tool: read_file -- ok
