crates/archon-tui/tests/snapshots/tui_snapshots__vim_insert_mode_after_i.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: vim_snapshot(&state)
---
mode=-- INSERT --
cursor=(0,0)
command_buffer=""
text=<<<
hello
>>>
